# string-calculator-kata-tdd-demo

./: .gitignore  README.md  pyproject.toml
calculator/: __init__.py  operators.py
tests/: test_calculator.py
